# transitive-closures

./: CHANGELOG.md  README.md  matrix.txt  package.yaml  transitive-closures.cabal
app/: Main.hs
src/: Main.hs  TransitiveClosure.hs  Warshall.hs
src/Algorithms/TransitiveClosure/: Naive.hs  Warshall.hs
